fix(List): sort not aligned with an actionbar

--- a/packages/components/src/List/ListComposition/Toolbar/ListToolbar.scss
+++ b/packages/components/src/List/ListComposition/Toolbar/ListToolbar.scss
@@ -20,6 +20,7 @@ $tc-toolbar-height: 7rem;
 
 	:global(.tc-actionbar-container) {
 		padding: 0;
+		width: auto;
 	}
 
 	&-right {
